--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,5 +1,5 @@
 \ThesisTitle{Auto-organisation Décentralisée Multi-Cartes}
-\ThesisDate{le plus tard possible en 2022}
+\ThesisDate{ ? décembre 2022}
 \ThesisAuthor{Noémie Gonnier}
 \ThesisUL
 % Jury:
